Names and dirs now follow Arduino lib structure

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,5 @@
 BOARD_TAG = uno
-#ARDUINO_LIBS = <space separated list of libs, arduino.mk will try to guess>
+USER_LIB_PATH=../..
+ARDUINO_LIBS = Motorshield
 export MONITOR_PORT = /dev/ttyACM3
 include /usr/share/arduino/Arduino.mk
