Make example sketch filename match folder name
The Arduino IDE requires the sketch folder name to match the filename of the primary sketch file. This change causes the example sketch to be accessible via the Arduino IDE's File > Examples > Motorshield menu after the library is installed.

Reference:
https://github.com/arduino/Arduino/wiki/Arduino-IDE-1.5:-Library-specification#library-examples

--- a/examples/example/Makefile
+++ b/examples/example/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG = uno
-USER_LIB_PATH=../..
+USER_LIB_PATH=../../..
 ARDUINO_LIBS = Motorshield
 export MONITOR_PORT = /dev/ttyACM3
 include /usr/share/arduino/Arduino.mk
